src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/GLXEXTSwapControl_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/GLXEXTSwapControl_StringErrorContext.class */
public final class GLXEXTSwapControl_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glXSwapIntervalEXT(JJI)V", "net/labymod/core/laby3d/opengl/error/generated/GLXEXTSwapControlErrorContext");
        return methods;
    }
}
